--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Homework 1</title>
+    <title>Homework 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -33,15 +33,17 @@
             </h2>
             <img src="./assets/images/homephoto.png" alt="SB photo" height="100px" width="100px">
             <!-- <hr width=80% padding-left=5%> -->
+            <p> NOTE: THIS IS THE ORIGINAL RESPONSIVE VERSION HAND-CODED WITHOUT
+                BOOTSTRAP AND WRITTEN IN CAPS JUST FOR THE FUN OF IT. DO THE SCREEN WIDTH
+                TESTING HERE AND YOU'LL SEE SOME THINGS THAT YOU WEREN'T EXPECTING, LIKE
+                FONTS GETTING BIGGER AS THE SCREEN GETS SMALLER. LOREM IPSUM YABBA DABBA
+                DIPSUM ...
+            </p><br>
             <p> Lorem Ipsum yadda yadda yadda aldksfja;slk dfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfja s;dlfkj sd;flkjas;dlkfj;asdlfkj;;laskdj kasdf;lkj
                 asd a; lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
                 a;sdlkfjas ;ldkfjas;dlfkjsd;flkjas;dlkf j;asdlfkj;;laskdj kasdf;lkj
                 a;sdlkfjas;ldkfjas;dl fkj;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
-            </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
             <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
