--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- <iframe src="./assets/includes/navheader.html"></iframe> -->
     <div id=navheader>
         <div class="wrapper" style="position:fixed;">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -33,7 +34,8 @@
                             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index2.html">Old Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index2.html">Responsive Home<span
+                                    class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -55,8 +57,8 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/stevenbowler/Basic-Portfolio" tabindex="-1"
-                                aria-disabled="true">Github</a>
+                            <a class="nav-link" href="https://github.com/stevenbowler/Responsive-Portfolio"
+                                tabindex="-1" aria-disabled="true">Github</a>
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0" target="blank" action="https://www.google.com/">
