--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html">Old Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index2.html">Responsive Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -63,7 +63,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/stevenbowler/Basic-Portfolio" tabindex="-1"
+                        <a class="nav-link" href="https://github.com/stevenbowler/Responsive-Portfolio" tabindex="-1"
                             aria-disabled="true">Github</a>
                     </li>
                 </ul>
