update search on index portfolio and contact

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             </h2>
             <img src="./assets/images/homephoto.png" alt="SB photo" height="100px" width="100px">
             <!-- <hr width=80% padding-left=5%> -->
-            <p> Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
+            <p> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR ANY CONTENT ... </strong>
+                Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
                 super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
                 tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfja s;dlfkj sd;flkjas;dlkfj;asdlfkj;;laskdj kasdf;lkj
