--- a/contact.html
+++ b/contact.html
@@ -67,10 +67,12 @@
                             aria-disabled="true">Github</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0" target="blank" action="https://www.google.com/">
+                <form id="googleSearchForm" class="form-inline my-2 my-lg-0" target="blank"
+                    action="https://github.com/stevenbowler/Responsive-Portfolio/search?">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search Repository"
-                        aria-label="Search" name="googlesearch">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        aria-label="Search" id="googlesearch" name="q">
+                    <button class="btn btn-outline-success my-2 my-sm-0" onclick="search()" type="submit"
+                        id="searchButton">Search</button>
                 </form>
             </div>
         </nav>
