--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="index2.html">Responsive Home<span
                                     class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
+                        </li> -->
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item dropdown">
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -48,13 +48,17 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
+                                Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Gimme 5 Then ...</a>
-                                <a class="dropdown-item" href="#">Gimme Another 5</a>
+                                <a class="dropdown-item"
+                                    href="https://stevenbowler.github.io/Responsive-Portfolio/index.html">Portfolio</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">And Another 10</a>
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
+                                    Guess Game</a>
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
+                                    Game</a>
+                                <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
                             </div>
                         </li>
                         <li class="nav-item">
