modified profile dropdown to include module 6 prework

--- a/index.html
+++ b/index.html
@@ -51,19 +51,18 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item"
-                                    href="https://stevenbowler.github.io/Responsive-Portfolio/index.html">Portfolio</a>
-                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
                                     Guess Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
                                     Game</a>
                                 <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="portfolio.html">Evolution - Prework Module 6</a>
                             </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/stevenbowler/Responsive-Portfolio"
-                                tabindex="-1" aria-disabled="true">Github</a>
+                                tabindex="-1" aria-disabled="true">Github Repo</a>
                         </li>
                     </ul>
                     <!-- https://github.com/stevenbowler/Responsive-Portfolio/search?q=navbar&unscoped_q=navbar -->
