add Trivia Game link to responsive portfolio dropdown

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Word
+                                    Guess Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
                                     Guess Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
