tidy up appearance

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-    <title>Homework 2</title>
+    <title>Steven Bowler Contact</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-    <div class="wrapper" style="position:fixed;">
+    <div class="wrapper" style="position:fixed; z-index: 10;">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -81,7 +82,7 @@
 
     <!-- <hr width=80% > -->
     <div class="wrapper sandyback">
-        <section class=portfoliocontactsection>
+        <section class="portfoliocontactsection animated zoomInRight delay-0s">
             <h2>Contact
             </h2>
             <form>
@@ -90,7 +91,7 @@
                 <label>Email: </label><br><br>
                 <input type=email placeholder="Example@gmail.com"><br><br>
                 <label>Enter your message here please: </label><br><br>
-                <textarea rows="10" placeholder="Enter Message Please"></textarea><br><br>
+                <textarea rows="5" placeholder="Enter Message Please"></textarea><br><br>
                 <button type=submit height=40px>Submit</button><br><br>
             </form>
         </section>
