--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 
 <head>
-    <title>Homework 2</title>
+    <title>Steven Bowler</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -20,7 +21,7 @@
 <body>
     <!-- <iframe src="./assets/includes/navheader.html"></iframe> -->
     <div id=navheader>
-        <div class="wrapper" style="position:fixed;">
+        <div class="wrapper" style="position:fixed; z-index: 10;">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -51,8 +52,8 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Word
-                                    Guess Game</a>
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
+                                    Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
                                     Guess Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
@@ -83,13 +84,15 @@
 
     </div>
     <!-- Content section -->
-    <div class="wrapper sandyback">
+    <div class="wrapper sandyback ">
         <section>
             <h2>About Me
             </h2>
-            <img src="./assets/images/homephoto.png" alt="SB photo" height="100px" width="100px">
+            <img class="animated zoomInRight delay-0s" style="z-index: -10;" src="./assets/images/homephoto.png"
+                alt="SB photo" height="100px" width="100px">
             <!-- <hr width=80% padding-left=5%> -->
-            <p> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR ANY CONTENT ... </strong>
+            <p class="animated zoomInRight delay-0s"> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR
+                    ANY CONTENT ... </strong>
                 Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
                 super duper hippi lippi yabba sica hicsum super sipi hoopi hippi sit salaca
                 tripsum aldksfja;slk dfj;lsakdjdf;laksdjf
@@ -99,26 +102,20 @@
                 a;sdlkfjas;ldkfjas;dl fkj;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
+            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
+            <p class="animated zoomInRight delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
+            <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
-            </p><br>
-            <p> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
-                a;sdlkfjas;ld kfjas;dlf kjsd;flkjas;dlkfj;as dlfkj;;l askdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
-            </p>
+
+
 
         </section>
     </div>
