more tidying-up

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
     </div>
     <!-- Content section -->
-    <div class="wrapper sandyback ">
+    <div class="wrapper sandyback">
         <section>
             <h2>About Me
             </h2>
-            <img class="animated zoomInRight delay-0s" style="z-index: -10;" src="./assets/images/homephoto.png"
-                alt="SB photo" height="100px" width="100px">
+            <img class="animated zoomInRight delay-0s" src="./assets/images/homephoto.png" alt="SB photo" height="100px"
+                width="100px">
             <!-- <hr width=80% padding-left=5%> -->
             <p class="animated zoomInRight delay-0s"> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR
                     ANY CONTENT ... </strong>
@@ -112,8 +112,8 @@
             </p><br>
             <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
                 a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
-                asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
+
 
 
 
