add GifTastic link and clean-up contact.html appearance

--- a/contact.html
+++ b/contact.html
@@ -87,11 +87,14 @@
             </h2>
             <form>
                 <label>Name: </label><br><br>
-                <input type=text placeholder="Enter Name" width=100%><br><br>
+                <input type=text placeholder="Enter Name" width=100%
+                    style="background-color:lightgrey; color:black;"><br><br>
                 <label>Email: </label><br><br>
-                <input type=email placeholder="Example@gmail.com"><br><br>
+                <input type=email placeholder="Example@gmail.com"
+                    style="background-color:lightgrey; color:black;"><br><br>
                 <label>Enter your message here please: </label><br><br>
-                <textarea rows="6" placeholder="Enter Message Please"></textarea><br><br>
+                <textarea rows="6" placeholder="Enter Message Please"
+                    style="background-color:lightgrey; color:black;"></textarea><br><br>
                 <button type=submit height=40px>Submit</button><br><br>
             </form>
         </section>
