--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
+                                    Game</a>
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
                                     Game</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
                                     Guess Game</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
-                                    Game</a>
                                 <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
                                     Evolution below</a>
                                 <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
@@ -111,6 +112,7 @@
                 asd a;lskj fdsa;lskdjf a;slkjdf alsdkfj a;sdlkj f;laksjdf a;sdlf
             </p><br>
             <p class="animated zoomInLeft delay-0s"> Lorem Ipsum yadda yadda yadda aldksfja;slkdfj;lsakdjdf;laksdjf
+                a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
                 a;sdlkfjas;ldkfjas ;dlfkjsd;flkja s;dlkfj;asdlfkj ;;laskdj kasdf;lkj
             </p><br>
 
