--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
+                                    Challenge</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
                                     Game</a>
