add Bountiful Books - Team Project 1

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                                 Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
+                                    Books - Team Project 1</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
                                     Challenge</a>
                                 <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
