cleanup navheader index and contact html, remove wrapper  class

--- a/index.html
+++ b/index.html
@@ -21,71 +21,70 @@
 <body>
     <!-- <iframe src="./assets/includes/navheader.html"></iframe> -->
     <div id=navheader>
-        <div class="wrapper" style="position:fixed; z-index: 10;">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <!-- <div class="wrapper" style="position:fixed; z-index: 10;"> -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                        </li>
-                        <!-- <li class="nav-item">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <!-- <li class="nav-item">
                             <a class="nav-link" href="index2.html">Responsive Home<span
                                     class="sr-only">(current)</span></a>
                         </li> -->
-                        <!-- <li class="nav-item">
+                    <!-- <li class="nav-item">
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li> -->
-                        <li class="nav-item dropdown">
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Portfolio
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
-                                    Books - Team Project 1</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
-                                    Challenge</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
-                                    Game</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
-                                    Game</a>
-                                <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
-                                    Guess Game</a>
-                                <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
-                                    Evolution below</a>
-                                <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="portfolio.html">Evolution - Prework Module 6</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/stevenbowler/Responsive-Portfolio"
-                                tabindex="-1" aria-disabled="true">Github Repo</a>
-                        </li>
-                    </ul>
-                    <!-- https://github.com/stevenbowler/Responsive-Portfolio/search?q=navbar&unscoped_q=navbar -->
-                    <form id="googleSearchForm" class="form-inline my-2 my-lg-0" target="blank"
-                        action="https://github.com/stevenbowler/Responsive-Portfolio/search?">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search Repository"
-                            aria-label="Search" id="googlesearch" name="q">
-                        <button class="btn btn-outline-success my-2 my-sm-0" onclick="search()" type="submit"
-                            id="searchButton">Search</button>
-                    </form>
-                </div>
-            </nav>
-        </div>
+                    <li class="nav-item dropdown">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Portfolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
+                                Books - Team Project 1</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
+                                Challenge</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/TriviaGame/">Trivia
+                                Game</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/unit-4-game/">Star Wars
+                                Game</a>
+                            <a class="dropdown-item" href="https://stevenbowler.github.io/Word-Guess-Game/">Word
+                                Guess Game</a>
+                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
+                                Evolution below</a>
+                            <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="portfolio.html">Evolution - Prework Module 6</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/stevenbowler/Responsive-Portfolio" tabindex="-1"
+                            aria-disabled="true">Github Repo</a>
+                    </li>
+                </ul>
+                <!-- https://github.com/stevenbowler/Responsive-Portfolio/search?q=navbar&unscoped_q=navbar -->
+                <form id="googleSearchForm" class="form-inline my-2 my-lg-0" target="blank"
+                    action="https://github.com/stevenbowler/Responsive-Portfolio/search?">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search Repository"
+                        aria-label="Search" id="googlesearch" name="q">
+                    <button class="btn btn-outline-success my-2 my-sm-0" onclick="search()" type="submit"
+                        id="searchButton">Search</button>
+                </form>
+            </div>
+        </nav>
+        <!-- </div> -->
 
     </div>
     <!-- Content section -->
