--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,9 @@
 </head>
 
 <body>
-    <div class="wrapper" style="position:fixed; z-index: 10;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div id=navheader>
+        <!-- <div class="wrapper" style="position:fixed; z-index: 10;"> -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
