remove portfolio.html add module 6 links to dropdown

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 </head>
 
 <body>
-    <!-- <iframe src="./assets/includes/navheader.html"></iframe> -->
     <div id=navheader>
-        <!-- <div class="wrapper" style="position:fixed; z-index: 10;"> -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="https://github.com/stevenbowler">Steven Bowler</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -34,13 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link" role="button" onclick="loadHome()">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                            <a class="nav-link" href="index2.html">Responsive Home<span
-                                    class="sr-only">(current)</span></a>
-                        </li> -->
-                    <!-- <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li> -->
+
                     <li class="nav-item dropdown">
                     <li class="nav-item">
                         <a class="nav-link" role="button" onclick="loadContact()">Contact</a>
@@ -51,8 +43,6 @@
                             Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
-                                Books - Team Project 1</a>
                             <a class="dropdown-item" href="https://stevenbowler.github.io/RPSchallenge/">RPS
                                 Challenge</a>
                             <a class="dropdown-item" href="https://stevenbowler.github.io/GifTastic/">GifTastic</a>
@@ -64,9 +54,24 @@
                                 Guess Game</a>
                             <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Joggle Game - see
                                 Evolution below</a>
-                            <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a>
+                            <a class="dropdown-item" href="https://robertalanis.github.io/Project-1/">Bountiful
+                                Books - Team Project 1</a>
+                            <!-- <a class="dropdown-item" href="index2.html">Responsive Profile w/o Bootstrap</a> -->
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="portfolio.html">Evolution - Prework Module 6</a>
+                            <a class="dropdown-item" href="./assets/module6/index.html">Evolution -
+                                Prework
+                                Module 6 Dec. 3, 2019</a>
+                            <a class="dropdown-item" href="./assets/module6/index8.html">Evolution - Prework Module 6
+                                Dec. 9, 2019</a>
+                            <a class="dropdown-item" href="./assets/module6/indexJQuery.html">Evolution - Prework Module
+                                6 Dec. 15,
+                                2019</a>
+                            <a class="dropdown-item" href="./assets/module6/indexReact.html">Evolution - Prework Module
+                                6 Dec. 28,
+                                2019</a>
+                            <a class="dropdown-item" href="http://calm-brook-76441.herokuapp.com/">Evolution - Prework
+                                Module 6 Jan. 15,
+                                2020</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -74,7 +79,6 @@
                             aria-disabled="true">Github Repo</a>
                     </li>
                 </ul>
-                <!-- https://github.com/stevenbowler/Responsive-Portfolio/search?q=navbar&unscoped_q=navbar -->
                 <form id="googleSearchForm" class="form-inline my-2 my-lg-0" target="blank"
                     action="https://github.com/stevenbowler/Responsive-Portfolio/search?">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search Repository"
@@ -84,18 +88,15 @@
                 </form>
             </div>
         </nav>
-        <!-- </div> -->
 
     </div>
     <h1>test</h1>
-    <!-- Content section -->
     <div id="home" class="jumbotron animated zoomInRight delay-0s">
         <section class="animated zoomInRight delay-0s">
             <h2>About Me
             </h2>
             <img class="animated zoomInRight delay-0s" src="./assets/images/homephoto.png" alt="SB photo" height="100px"
                 width="100px">
-            <!-- <hr width=80% padding-left=5%> -->
             <p class="animated zoomInRight delay-0s"> <strong>NOTE: THE SEARCH WORKS FOR THIS REPOSITORY CAN SEARCH FOR
                     ANY CONTENT ... </strong>
                 Lorem Ipsum yabba dabba dipsum hicca laca yuca laca mara nuri sipsum
@@ -147,19 +148,8 @@
         <h3>Copyright Super Dabby&copy;</h3>
     </div>
 
-    <!-- Footer -->
-    <!-- <footer class="page-footer font-small grey">
-        <div class="footer-copyright text-center py-3">© 2020 Copyright: Super Dabby
-            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-        </div>
-    </footer> -->
-    <!-- Footer -->
-
-
-
 </body>
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -169,7 +159,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-<!-- <script>$("#navheader").load("./assets/includes/navheader.html"); </script> -->
 <script type="text/javascript" src="javascript.js"></script>
 
 </html>
