--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
                         <a class="nav-link" role="button" onclick="loadHome()">Home</a>
                     </li>
 
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown"> -->
                     <li class="nav-item">
                         <a class="nav-link" role="button" onclick="loadContact()">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./assets/includes/Steven-Bowler.pdf">Resume</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
